--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html{
   height: 100%;
 }
 body{
-  background-image: url(leaf.jpg);
+  background-image: url(images/leaf.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
